<resources>
    <string name="app_name">Taland</string>
    <string name="splash_screen_description">深圳大学ARGO研发小组</string>
    <string name="no_result">对不起，没有搜索到相关数据！</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="drawer_item_persistent_compact_header">PersistentHeader Drawer</string>
    <string name="drawer_item_persistent_compact_header_desc">Smaller persistent account header</string>
    <string name="drawer_item_compact_header">CompactHeader Drawer</string>
    <string name="drawer_item_compact_header_desc">Smaller account header</string>
    <string name="drawer_item_action_bar_drawer">ActionBar Drawer</string>
    <string name="drawer_item_action_bar_drawer_desc">Shows how to use with an actionbar</string>
    <string name="drawer_item_multi_drawer">Multi Drawer</string>
    <string name="drawer_item_multi_drawer_desc">Left and Right side drawer</string>
    <string name="drawer_item_non_translucent_status_drawer">NonTranslucentStatus Drawer</string>
    <string name="drawer_item_non_translucent_status_drawer_desc">Drawer below statusBar</string>
    <string name="drawer_item_advanced_drawer">Advanced Drawer</string>
    <string name="drawer_item_advanced_drawer_desc">More advanced drawer features</string>
    <string name="drawer_item_embedded_drawer">Embedded Drawer</string>
    <string name="drawer_item_embedded_drawer_desc">Embed the drawer anywhere</string>
    <string name="drawer_item_mini_drawer">MiniDrawer</string>
    <string name="drawer_item_mini_drawer_desc">Always visible MiniDrawer</string>
    <string name="drawer_item_fullscreen_drawer">FullScreen Drawer</string>
    <string name="drawer_item_fullscreen_drawer_desc">Drawer in FullScreen activity</string>
    <string name="drawer_item_custom_container_drawer">CustomContainer Drawer</string>
    <string name="drawer_item_custom_container_drawer_desc">Drawer in different view hirachy</string>
    <string name="drawer_item_menu_drawer">Menu Drawer</string>
    <string name="drawer_item_menu_drawer_desc">Drawer from menu.xml</string>
    <string name="drawer_item_fragment_drawer">Fragment Drawer</string>
    <string name="drawer_item_fragment_drawer_desc">Use drawer within fragments</string>
    <string name="drawer_item_collapsing_toolbar_drawer">CollapsingToolbar Drawer</string>
    <string name="drawer_item_collapsing_toolbar_drawer_desc">Uses a CollapsingToolbarLayout</string>
    <string name="drawer_item_crossfade_drawer_layout_drawer">CrossfadeDrawerLayout</string>
    <string name="drawer_item_crossfade_drawer_layout_drawer_desc">2-Step Drawer behavior</string>
    <string name="drawer_item_menu_drawer_item">Menu Drawer Item</string>
    <string name="drawer_item_menu_drawer_item_desc">Sample menu item with overflow button</string>
    <string name="drawer_item_home">Home</string>
    <string name="drawer_item_free_play">Free Play</string>
    <string name="drawer_item_custom">Custom</string>
    <string name="drawer_item_section_header">Section Header</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_item_help">Help</string>
    <string name="drawer_item_open_source">Open Source</string>
    <string name="drawer_item_contact">Contact</string>
    <string name="error_code">异常码：</string>
    <string name="please_check_net">请检查网络</string>
    <string name="load_error">加载失败</string>
    <string name="please_wait">请稍等</string>
    <string name="content_no_empty">内容不能为空</string>
    <string name="complete">完成</string>
    <string name="change_success">修改成功</string>
    <string name="change_fail">修改失败</string>
    <string name="set_success">设置成功</string>
    <string name="set_fail">设置失败</string>
    <string name="save">保存</string>
    <string name="save_success">保存成功</string>
    <string name="save_fail">保存失败</string>
    <string name="cancel">取消</string>
    <string name="sure">确定</string>
    <string name="sure_with_count">确定(%1$d)</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="Login">登录</string>
    <string name="Register">注册</string>
    <string name="login_error">登录失败</string>
    <string name="login_success">登录成功</string>
    <string name="phone_format_error">手机格式有误</string>
    <string name="phone_not_empty">手机号不能为空</string>
    <string name="password_not_empty">密码不能为空</string>
    <string name="password_not_contain_blank">密码不能包含空格</string>
    <string name="nickname_not_empty">昵称不能为空</string>
    <string name="nickname_not_contain_blank">昵称不能包含空格</string>
    <string name="vertify_code_not_empty">验证码不能为空</string>
    <string name="disconnect_server">与服务器失联</string>
    <string name="forgot_password">找回密码</string>
    <string name="new_user">新用户</string>
    <string name="nickname">昵称</string>
    <string name="password">密码</string>
    <string name="password_en">Password</string>
    <string name="area">国家/地区</string>
    <string name="verification_code">验证码</string>
    <string name="code">短信验证码</string>
    <string name="send_code">发送验证码</string>
    <string name="phone_not_available">手机号不可用</string>
    <string name="send_code_error">发送验证码失败</string>
    <string name="vertify_code_error">验证码有误</string>
    <string name="send_code_btn_normal_tip">发送验证码</string>
    <string name="register_error">注册出错</string>
    <string name="arcamera">摄像头</string>
    <string name="message">微信</string>
    <string name="contacts">通讯录</string>
    <string name="discovery">发现</string>
    <string name="me">我</string>
    <string name="draft">[草稿]</string>
    <string name="picture">图片</string>
    <string name="voice">语音</string>
    <string name="sticker">贴图</string>
    <string name="video">视频</string>
    <string name="set_conversation_to_top">置顶聊天</string>
    <string name="cancel_conversation_to_top">取消置顶</string>
    <string name="delete_conversation">删除该聊天</string>
    <string name="new_friend">新的朋友</string>
    <string name="group_cheat">群聊</string>
    <string name="group_tag">标签</string>
    <string name="group_public_number">公众号</string>
    <string name="load_contacts_error">加载联系人失败</string>
    <string name="count_of_contacts">%1$d位联系人</string>
    <string name="friend_cicle">朋友圈</string>
    <string name="scan">扫一扫</string>
    <string name="shake">摇一摇</string>
    <string name="people_nearby">附近的人</string>
    <string name="shopping">购物</string>
    <string name="game">游戏</string>
    <string name="my_chat_account">微信号:%1$s</string>
    <string name="album">相册</string>
    <string name="collection">收藏</string>
    <string name="wallet">钱包</string>
    <string name="card_package">卡包</string>
    <string name="jian_shu">简书</string>
    <string name="csdn">CSDN</string>
    <string name="oschina">码云</string>
    <string name="github">GitHub</string>
    <string name="emotion">表情</string>
    <string name="setting">设置</string>
    <string name="qr_code_card_tip">扫一扫上面的二维码图案，加我微信</string>
    <string name="header_pic">头像</string>
    <string name="wechat_account">微信号</string>
    <string name="qr_code_card">二维码名片</string>
    <string name="my_location">我的地址</string>
    <string name="gender">性别</string>
    <string name="not_fill">未填写</string>
    <string name="add_friend">添加朋友</string>
    <string name="no_recommend_friend">还没有推荐的朋友</string>
    <string name="no_recommend_friend_tip">你可以绑定手机/QQ账号，以便找到更多好友</string>
    <string name="add_phone_contact">添加手机联系人</string>
    <string name="wechat_qq_phone">微信号/QQ号/手机号</string>
    <string name="agree_friend_fail">同意添加好友失败</string>
    <string name="create_group">发起群聊</string>
    <string name="scan_one_scan">扫一扫</string>
    <string name="payment_received">收付款</string>
    <string name="help_feedback">帮助与反馈</string>
    <string name="my_wechat_account">我的微信号:</string>
    <string name="radar_add_friend">雷达加朋友</string>
    <string name="add_near_friend">添加身边的朋友</string>
    <string name="create_group_face_to_face">面对面建群</string>
    <string name="create_group_with_near_friend">与身边的朋友进入同一个群聊</string>
    <string name="scan_qr_code_business_card">扫描二维码名片</string>
    <string name="phone_contacts">手机联系人</string>
    <string name="add_friend_from_contact">添加或邀请通讯录中的朋友</string>
    <string name="public_number">公众号</string>
    <string name="get_more_info_and_service">获取更多资讯和服务</string>
    <string name="scan_code">扫码</string>
    <string name="cover">封面</string>
    <string name="street_scape">街景</string>
    <string name="translate">翻译</string>
    <string name="qr_cord_or_bar_code">二级码/条码</string>
    <string name="cover_or_movie_poster">封面/电影海报</string>
    <string name="select_qr_code_from_ablum">从相册选取二维码</string>
    <string name="scan_fail">扫描失败</string>
    <string name="open_camera_error">打开相机出错</string>
    <string name="this_account_was_your_friend">该用户已经是您的好友</string>
    <string name="you_already_in_this_group">您已经在群聊中</string>
    <string name="select_group_info_fail_please_restart_app">已加入群聊，但查询群信息失败，请重启APP</string>
    <string name="join_group_fail">入群失败</string>
    <string name="user_no_found">该用户不存在</string>
    <string name="search_colon">搜索:</string>
    <string name="search">搜索</string>
    <string name="nickname_colon">昵称:%1$s</string>
    <string name="set_alias_and_tag">设置备注和标签</string>
    <string name="signature">个性签名</string>
    <string name="send_message">发消息</string>
    <string name="add_to_contact">添加到通讯录</string>
    <string name="add_to_black_list">加入黑名单</string>
    <string name="delete">删除</string>
    <string name="add_to_desktop">添加到桌面</string>
    <string name="change_my_name_tip">好名字可以让你的朋友 更容易记住你。</string>
    <string name="delete_contact">删除联系人</string>
    <string name="delete_contact_content">将联系人%1$s删除，将同时删除与该联系人的聊天记录</string>
    <string name="delete_success">删除成功</string>
    <string name="delete_fail">删除失败</string>
    <string name="save_to_phone">保存到手机</string>
    <string name="alias">备注名</string>
    <string name="tag">标签</string>
    <string name="add_tag_to_classfy_contacts">添加标签对联系人进行分类</string>
    <string name="phone_number">手机号码</string>
    <string name="phone_number_en">Phone</string>
    <string name="add_phone_number">添加电话号码</string>
    <string name="describe">描述</string>
    <string name="add_picture">附加图片</string>
    <string name="add_business_card_or_pic">添加名片或相关图片</string>
    <string name="alias_no_empty">备注名不能为空</string>
    <string name="postscript_tip">你需要发送验证申请，等对方通过</string>
    <string name="disallow_it_see_my_circle">不让他(她)看我的朋友圈</string>
    <string name="send">发送</string>
    <string name="rquest_sent_success">请求已发送</string>
    <string name="rquest_sent_fail">请求发送失败</string>
    <string name="please_to_talk">按住 说话</string>
    <string name="shot">拍摄</string>
    <string name="location">位置</string>
    <string name="red_pack">红包</string>
    <string name="wx_red_pack">微信红包</string>
    <string name="file_out_of_date">文件已过期</string>
    <string name="SET_TEXT_TYPING_TITLE">对方正在输入</string>
    <string name="SET_VOICE_TYPING_TITLE">对方正在讲话</string>
    <string name="voice_rec">手指上滑，取消发送</string>
    <string name="voice_cancel">松开手指，取消发送</string>
    <string name="voice_short">录音时间太短</string>
    <string name="voice_failure">录音失败！</string>
    <string name="send_audio_fail">发送语音失败，文件长度为0或语音权限没有开启</string>
    <string name="remove_group_before_str">将</string>
    <string name="remove_group_after_str">移出了群组</string>
    <string name="created_group">%1$s创建了群组</string>
    <string name="invitation">%1$s邀请%2$s加入了群组</string>
    <string name="remove_group_member">%1$s将%2$s移出了群组</string>
    <string name="remove_self">%1$s被%2$s移出了群组</string>
    <string name="change_group_name">%1$s修改群名称为%2$s</string>
    <string name="you">你</string>
    <string name="other_party">对方</string>
    <string name="divided_string">、</string>
    <string name="group_notification_summary">[群组通知]</string>
    <string name="quit_groups">退出了群组</string>
</resources>