<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/include_toolbar"
        android:visibility="gone"/>
    <FrameLayout
        android:id="@+id/de_frm_backgroud"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/login_img_backgroud"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="-50dp"
            android:layout_marginRight="-300dp"
            android:background="@drawable/myroadgray"
            android:scaleType="centerCrop" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <include layout="@layout/logoview" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="72dip"
            android:orientation="vertical">


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/TextInputPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dip"
                    android:layout_marginRight="50dip"
                    android:textColorHint="@color/white">

                    <com.edward.navigation.widget.ClearWriteEditText
                        android:id="@+id/ed_login_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/rc_ed_public_service_search_selector"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:hint="@string/phone_number"
                        android:inputType="phone"
                        android:padding="10dp"
                        android:maxLength="11"
                        android:maxLines="1"
                        android:textColor="#FFFFFF"
                        android:textColorHint="#FFFFFF" />
                </android.support.design.widget.TextInputLayout>


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dip"
                android:layout_marginRight="50dp"
                android:layout_marginTop="25dip"
                android:orientation="horizontal">


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/TextInputPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/white"
                    android:layout_weight="0.99">

                    <com.edward.navigation.widget.ClearWriteEditText
                        android:id="@+id/ed_login_password"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/rc_ed_public_service_search_selector"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:textColor="#FFFFFF"
                        android:textColorHint="#FFFFFF"
                        android:gravity="left|center_vertical"
                        android:padding="10dp"
                        android:text="8125172123" />
                </android.support.design.widget.TextInputLayout>

                <ImageView
                    android:id="@+id/psd_eye"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginTop="5dp"
                    android:layout_gravity="center_vertical"
                    android:src="@mipmap/white_eye_edward" />
            </LinearLayout>

            <Button
                android:id="@+id/ed_login_sign"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dip"
                android:layout_marginRight="50dip"
                android:layout_marginTop="34dip"
                android:background="@drawable/rs_select_btn_blue"
                android:text="@string/Login"
                android:textColor="#FFFFFF" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/ed_login_register"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_alignParentBottom="true"

        android:text="@string/new_user" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Powered by Edward"
        android:textSize="11sp"
        android:padding="15dp"
        android:textColor="@color/white_power"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/ed_login_forgot"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/forgot_password" />

</RelativeLayout>
